# visions_of_mandelbrot

./: Cargo.toml  README.md  justfile
src/: main.rs  mandelbrot.rs
static/: index.html
web_target/: index.html  visions_of_mandelbrot.js  visions_of_mandelbrot_bg.wasm
