[package]
name = "visions_of_mandelbrot"
version = "0.1.0"
edition = "2021"

[features]
optimize = ["log/release_max_level_warn"]
web = ["wgpu/webgl"]
default = ["optimize"]

[dependencies]
log = "0.4"
pixels = "0.9.0"
wgpu = "0.12"
winit = "0.26"
winit_input_helper = "0.11"
palette = "0.6"
getrandom =  { version = "0.2.3", features = ["js"] }
rand = "0.8.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"
pollster = "0.2"
